# PerfEngCourse

./: README.md
assignments/code/: README.md
data/: README.md  metrics.csv  students.csv
scripts/: .gitignore  README.md  common.py  make_plots.py  make_table.py  make_tables.py  pyproject.toml
slides/: README.md
